--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         }
     },
     "require-dev": {
+        "symfony/debug-bundle": "6.2.*",
         "symfony/maker-bundle": "^1.48"
     }
 }
