--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,7 +11,7 @@ phases:
       - ls -lrt
   pre_build:
     commands:
-      - echo Installing source php dependencies....
+      - echo Installing source php dependencies...
   build:
     commands:
       - echo Build started on `date`
