--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html
+    destination: /var/www/html/doc-back-symfony
 hooks:
    BeforeInstall:
     - location: scripts/installapache.sh
