--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,6 +7,7 @@ phases:
       - pwd
       - ls -lrt
       - wget https://get.symfony.com/cli/installer -O - | bash
+      - APP_ENV=prod APP_DEBUG=0 php bin/console cache:clear
       - composer install --no-dev --optimize-autoloader
       - ls -lrt
   pre_build:
