--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=21e213406bffcb8f43c373632fa2ae29
 ###< symfony/framework-bundle ###
 
@@ -24,14 +24,15 @@ APP_SECRET=21e213406bffcb8f43c373632fa2ae29
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://#{BuildVariables.User}:#{BuildVariables.Password}@#{BuildVariables.Url}:#{BuildVariables.Port}/#{BuildVariables.Database}?charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=23246d106abee19edb25e1679f26481d
+# JWT_PASSPHRASE=23246d106abee19edb25e1679f26481d
+JWT_PASSPHRASE=#{BuildVariables.Passphrase}
 ###< lexik/jwt-authentication-bundle ###
 
 ###> nelmio/cors-bundle ###
