--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=21e213406bffcb8f43c373632fa2ae29
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://admin_user:Pa$$w0rd@127.0.0.1:3306/logindoc?charset=utf8mb4"
+DATABASE_URL="mysql://root:Pa$$w0rd@127.0.0.1:3306/logindoc?charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
