--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,6 +5,7 @@ phases:
       php: latest
     commands:
       - pwd
+      - echo `hostname`
       - ls -lrt
       - wget https://get.symfony.com/cli/installer -O - | bash
       - export APP_ENV=prod 
