remove composer.phar call from buildspec

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,10 +7,10 @@ phases:
       - pwd
       - uname -a
       - ls -lrt
-      - wget https://get.symfony.com/cli/installer -O - | bash
-      - export APP_ENV=prod 
-      - export APP_DEBUG=0 
-      - composer install --no-dev --optimize-autoloader
+#      - wget https://get.symfony.com/cli/installer -O - | bash
+#      - export APP_ENV=prod 
+#      - export APP_DEBUG=0 
+#      - composer install --no-dev --optimize-autoloader
       - ls -lrt
   pre_build:
     commands:
