modification ref environment variable

--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ DATABASE_URL="mysql://denist:Passw0rd@127.0.0.1:3306/logindoc?charset=utf8mb4"
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 # JWT_PASSPHRASE=23246d106abee19edb25e1679f26481d
-JWT_PASSPHRASE=#{Passphrase}
+JWT_PASSPHRASE=${Passphrase}
 ###< lexik/jwt-authentication-bundle ###
 
 ###> nelmio/cors-bundle ###
