--- a/Dockerfile.symfony
+++ b/Dockerfile.symfony
@@ -59,5 +59,5 @@ RUN a2enmod rewrite
 RUN a2enmod ssl 
 RUN service apache2 restart
 
-CMD ["composer.phar", "install", "--no-dev", "--optimize-autoloader"]
-#CMD ["sh", "-c", "./startcontainer.sh"]
+#CMD ["composer.phar", "install", "--no-dev", "--optimize-autoloader"]
+CMD ["sh", "-c", "./startcontainer.sh"]
