--- a/Dockerfile.symfony
+++ b/Dockerfile.symfony
@@ -63,4 +63,4 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 EXPOSE 9443
 
 #CMD ["composer.phar", "install", "--no-dev", "--optimize-autoloader"]
-CMD ["sh", "-c", "./startcontainer.sh"]
+CMD ["sh", "-c", "./scripts/startcontainer.sh"]
