--- a/scripts/000-default-9443.conf
+++ b/scripts/000-default-9443.conf
@@ -9,8 +9,12 @@
 
         DirectoryIndex index.php
 
-        SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
-
+        <FilesMatch "\.(cgi|shtml|phtml|php)$">
+                SSLOptions +StdEnvVars
+        </FilesMatch>
+        <Directory /usr/lib/cgi-bin>
+                SSLOptions +StdEnvVars
+        </Directory>
         <Directory "/var/www/html/doc_back_symfony/public">
                 Require all granted
                 FallbackResource /index.php
