--- a/.env
+++ b/.env
@@ -19,6 +19,8 @@ APP_ENV=prod
 APP_SECRET=21e213406bffcb8f43c373632fa2ae29
 ###< symfony/framework-bundle ###
 
+APP_DEBUG=0 
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
@@ -38,3 +40,9 @@ JWT_PASSPHRASE={{Passphrase}}
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+############ Volumes #############
+APP_SYMFONY=${APP_SYMFONY_MOUNT}
+APP_SYMFONY_MOUNT=?
+SSL=${SSL_MOUNT}
+SSL_MOUNT=?
