--- a/scripts/000-default-9443.conf
+++ b/scripts/000-default-9443.conf
@@ -23,4 +23,6 @@
         ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
 
+        ServerName ${SERVER_NAME}
+
 </VirtualHost>
