--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,25 +3,30 @@ phases:
   install:
     runtime-versions:
       php: latest
+  build:
     commands:
-      - pwd
-      - uname -a
-      - ls -lrt
+      - mvn compile -Dgpg.skip=true -Dmaven.repo.local=$CODEBUILD_CDKPROJECTEFS
+
+
+#    commands:
+#      - pwd
+#      - uname -a
+#      - ls -lrt
 #      - wget https://get.symfony.com/cli/installer -O - | bash
 #      - export APP_ENV=prod 
 #      - export APP_DEBUG=0 
 #      - composer install --no-dev --optimize-autoloader
-      - ls -lrt
-  pre_build:
-    commands:
-      - echo Installing source php dependencies...
-  build:
-    commands:
-      - echo Build started on `date`
-    post_build:
-      commands:
-        - echo Build completed on `date`
-artifacts:
-  type: zip
-  files:
-    - "**/*"
+#      - ls -lrt
+#  pre_build:
+#    commands:
+#      - echo Installing source php dependencies...
+#  build:
+#    commands:
+#      - echo Build started on `date`
+#    post_build:
+#      commands:
+#        - echo Build completed on `date`
+#artifacts:
+#  type: zip
+#  files:
+#    - "**/*"
