--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,5 @@ files:
     destination: /var/www/html/doc-back-symfony
 hooks:
    BeforeInstall:
-    - location: scripts/installapache.sh
-      runas: root
-    - location: scripts/startapache.sh
-      runas: root
-   AfterInstall:
-    - location: scripts/restartapache.sh
+    - location: scripts/startcontainer.sh
       runas: root
