add mount efs on ec2 command 2

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -27,6 +27,7 @@ phases:
       - echo Build completed on `date`
       - echo "Copying files"
       - cp -r .[!.]* $CODEBUILD_CDKPROJECTEFS
+      - cp -r * $CODEBUILD_CDKPROJECTEFS
       - ls -lrta $CODEBUILD_CDKPROJECTEFS
 
 artifacts:
