add apache conf for amazon linux

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,5 @@ files:
     destination: /var/www/html/doc_back_symfony
 hooks:
    BeforeInstall:
-    - location: scripts/installapache.sh
+    - location: scripts/installapache-aws.sh
       runas: root
