add apache conf for amazon linux aws 17

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -36,5 +36,5 @@ artifacts:
   type: zip
   files:
     - "appspec.yml"
-    - "scripts/*"
+#    - "scripts/startapache-aws.sh"
 #    - "imagedefinitions.json"
