add apache conf for amazon linux aws 18

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -36,5 +36,5 @@ artifacts:
   type: zip
   files:
     - "appspec.yml"
-#    - "scripts/startapache-aws.sh"
+    - "scripts/startapache-aws.sh"
 #    - "imagedefinitions.json"
