add apache conf for amazon linux aws 20

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -37,4 +37,5 @@ artifacts:
   files:
     - "appspec.yml"
     - "scripts/startapache-aws.sh"
+    - "scripts/restartapache-aws.sh"
 #    - "imagedefinitions.json"
