--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -26,11 +26,12 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo "Copying files"
-#      - mkdir -p $CODEBUILD_CDKPROJECTEFS/doc_back_symfony
-      - cp -r .[!.]* $CODEBUILD_CDKPROJECTEFS
-      - cp -r * $CODEBUILD_CDKPROJECTEFS
-      - chmod -R 755 $CODEBUILD_CDKPROJECTEFS/scripts
-      - ls -lrta $CODEBUILD_CDKPROJECTEFS
+      - export dest=$CODEBUILD_CDKPROJECTEFS/doc_back_symfony
+      - mkdir -p $dest
+      - cp -r .[!.]* $dest
+      - cp -r * $dest
+      - chmod -R 755 $dest/scripts
+      - ls -lrta $dest
 
 artifacts:
   type: zip
