move init to cloudformation 5

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -39,4 +39,5 @@ artifacts:
     - "appspec.yml"
     - "scripts/startapache-aws.sh"
     - "scripts/restartapache-aws.sh"
+    - "scripts/restartapache-aws-symfony.sh"
 #    - "imagedefinitions.json"
