--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_DEBUG=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://logindocuser:password@localhost:3306/logindoc?charset=utf8mb4"
+DATABASE_URL="mysql://admin:password@nmap-ncat.x86_64:3306/logindoc?charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
