modify env for rds database access 5

--- a/scripts/httpd-vhosts-9443.conf
+++ b/scripts/httpd-vhosts-9443.conf
@@ -1,8 +1,13 @@
 
 <VirtualHost *:9443>
-    ServerName symfony.localhost
+
+		SSLEngine on
+		SSLCertificateFile /etc/httpd/ssl/etupdt-2022.crt
+		SSLCertificateKeyFile /etc/httpd/ssl/etupdt-2022.key
+
+    ServerName etupdt.com
     DocumentRoot "/var/www/html/doc_back_symfony/public"
-	DirectoryIndex index.php
+		DirectoryIndex index.php
     SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 	<Directory "/var/www/html/doc_back_symfony/public">
 		Require all granted
