change certificate to 2023 4

--- a/scripts/httpd-vhosts-9443.conf
+++ b/scripts/httpd-vhosts-9443.conf
@@ -2,8 +2,8 @@
 <VirtualHost *:9443>
 
 		SSLEngine on
-		SSLCertificateFile /etc/httpd/ssl/studi-cacert.crt
-		SSLCertificateKeyFile /etc/httpd/ssl/studi-public.crt
+		SSLCertificateFile /etc/httpd/ssl/studi-public.crt
+		SSLCertificateKeyFile /etc/httpd/ssl/studi-private.key
 
     ServerName etupdt.com
     DocumentRoot "/var/www/html/doc_back_symfony/public"
