change cors url

--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ JWT_PASSPHRASE={{Passphrase}}
 ###< lexik/jwt-authentication-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https://www.etupdt.com(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ############ Volumes #############
