--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,9 @@
 
 APP_ENV=dev
 
-DATABASE_URL="mysql://denist:Passw0rd@database:3306/logindoc?charset=utf8mb4
+DATABASE_URL="mysql://admin:password@database:3306/logindoc?charset=utf8mb4"
+
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 
 ############ Volumes #############
 APP_SYMFONY_MOUNT=
